--- a/package.json
+++ b/package.json
@@ -17,9 +17,22 @@
     "@angular/forms": "~13.0.0",
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
-    "@angular/router": "~13.0.0",
+    "@angular/router": "^13.0.3",
+    "@ngrx/store": "^13.0.2",
+    "@types/angular": "^1.8.3",
+    "ajv": "^6.9.1",
+    "assert": "^2.0.0",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
     "rxjs": "~7.4.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tslib": "^2.3.0",
+    "util": "^0.12.4",
+    "walletconnect": "^1.7.0",
+    "web3": "^1.6.1",
+    "web3modal": "^1.9.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -28,12 +41,16 @@
     "@angular/compiler-cli": "~13.0.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/react": "^17.0.37",
+    "buffer": "^6.0.3",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.4.3"
+    "process": "^0.11.10",
+    "typescript": "~4.4.3",
+    "webpack": "^5.65.0"
   }
 }
